[gd_scene load_steps=10 format=3 uid="uid://3nntiov7y0hu"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_a30hr"]
[ext_resource type="Resource" uid="uid://db6tb870t0lae" path="res://scenes/run/run_init_data.tres" id="2_jy3gy"]
[ext_resource type="Shader" path="res://scenes/map/outeroutline.gdshader" id="3_twvmt"]
[ext_resource type="Texture2D" uid="uid://cblsh65u85yem" path="res://SDL practice.png" id="4_goafy"]
[ext_resource type="Texture2D" uid="uid://bmqma01c44vqi" path="res://scenes/ui/pixil-frame-0 (8).png" id="5_hef88"]

[sub_resource type="Gradient" id="Gradient_qdctb"]
colors = PackedColorArray(0.2, 0.117647, 0.0509804, 1, 0.054902, 0, 0.0588235, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_6pnu1"]
gradient = SubResource("Gradient_qdctb")
width = 50

[sub_resource type="LabelSettings" id="LabelSettings_plo6v"]
line_spacing = 10.0
shadow_size = 4
shadow_color = Color(0.878431, 0.564706, 0.580392, 0.282353)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_o6xxo"]
shader = ExtResource("3_twvmt")
shader_parameter/line_color = Color(0.607843, 0.607843, 0.607843, 1)
shader_parameter/line_thickness = 5.447

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_a30hr")
run_init_data = ExtResource("2_jy3gy")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -7.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.029, 1.00291)
texture = SubResource("GradientTexture1D_6pnu1")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.0
offset_top = -62.0
offset_right = 105.0
offset_bottom = -18.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "SDL Security Spiel"
label_settings = SubResource("LabelSettings_plo6v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="SdlPractice" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_o6xxo")
position = Vector2(48.0625, 10.375)
scale = Vector2(0.0561719, 0.0517578)
texture = ExtResource("4_goafy")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -2.0
offset_right = 30.0
offset_bottom = 52.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 6
alignment = 1

[node name="ContinueButton" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(60, 14)
layout_mode = 2
disabled = true
text = "Weiter spielen"

[node name="BackgroundNineRect" type="NinePatchRect" parent="VBoxContainer/ContinueButton"]
show_behind_parent = true
offset_right = 61.0
offset_bottom = 15.0
texture = ExtResource("5_hef88")
patch_margin_left = 8
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 8

[node name="NewRun" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 14)
layout_mode = 2
text = "Neues Spiel"

[node name="BackgroundNineRect" type="NinePatchRect" parent="VBoxContainer/NewRun"]
show_behind_parent = true
offset_right = 61.0
offset_bottom = 15.0
texture = ExtResource("5_hef88")
patch_margin_left = 8
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 8

[node name="Exit" type="Button" parent="VBoxContainer"]
custom_minimum_size = Vector2(60, 14)
layout_mode = 2
text = "Quit"

[node name="BackgroundNineRect" type="NinePatchRect" parent="VBoxContainer/Exit"]
show_behind_parent = true
offset_right = 61.0
offset_bottom = 14.0
texture = ExtResource("5_hef88")
patch_margin_left = 8
patch_margin_top = 6
patch_margin_right = 6
patch_margin_bottom = 8

[connection signal="pressed" from="VBoxContainer/ContinueButton" to="." method="_on_continue_pressed"]
[connection signal="pressed" from="VBoxContainer/NewRun" to="." method="_on_new_run_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_exit_pressed"]
